--- a/requirements.txt
+++ b/requirements.txt
@@ -2,43 +2,43 @@
 #    uv pip compile requirements.in --output-file=requirements.txt
 aiohappyeyeballs==2.6.1
     # via aiohttp
-aiohttp==3.12.15
+aiohttp==3.13.2
     # via langchain-community
 aiosignal==1.4.0
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-anthropic==0.68.0
+anthropic==0.73.0
     # via langchain-anthropic
-anyio==4.10.0
+anyio==4.11.0
     # via
     #   anthropic
     #   httpx
     #   openai
-asgiref==3.9.1
+asgiref==3.10.0
     # via
     #   django
     #   django-allauth
-attrs==25.3.0
+attrs==25.4.0
     # via aiohttp
 babel==2.17.0
     # via courlan
-beautifulsoup4==4.13.5
+beautifulsoup4==4.14.2
     # via
     #   -r requirements.in
     #   deep-translator
-blis==1.2.1
+blis==1.3.2
     # via thinc
 cached-property==2.0.1
     # via genanki
-cachetools==5.5.2
+cachetools==6.2.2
     # via google-auth
 catalogue==2.0.10
     # via
     #   spacy
     #   srsly
     #   thinc
-certifi==2025.8.3
+certifi==2025.11.12
     # via
     #   httpcore
     #   httpx
@@ -48,18 +48,18 @@ cffi==2.0.0
     # via cryptography
 chardet==5.2.0
     # via -r requirements.in
-charset-normalizer==3.4.3
+charset-normalizer==3.4.4
     # via
     #   htmldate
     #   requests
     #   trafilatura
 chevron==0.14.0
     # via genanki
-click==8.3.0
+click==8.3.1
     # via
     #   nltk
-    #   typer
-cloudpathlib==0.22.0
+    #   typer-slim
+cloudpathlib==0.23.0
     # via weasel
 confection==0.1.5
     # via
@@ -67,9 +67,9 @@ confection==0.1.5
     #   weasel
 courlan==1.3.2
     # via trafilatura
-cryptography==46.0.1
+cryptography==46.0.3
     # via pyopenssl
-cymem==2.0.11
+cymem==2.0.13
     # via
     #   preshed
     #   spacy
@@ -84,12 +84,12 @@ distro==1.9.0
     # via
     #   anthropic
     #   openai
-django==5.2.6
+django==5.2.8
     # via
     #   -r requirements.in
     #   django-allauth
     #   django-extensions
-django-allauth==65.11.2
+django-allauth==65.13.0
     # via -r requirements.in
 django-extensions==4.1
     # via -r requirements.in
@@ -97,53 +97,54 @@ django-widget-tweaks==1.5.0
     # via -r requirements.in
 docstring-parser==0.17.0
     # via anthropic
-ebooklib==0.19
+ebooklib==0.20
     # via -r requirements.in
 fasttext==0.9.3
     # via -r requirements.in
-filelock==3.19.1
+filelock==3.20.0
     # via huggingface-hub
 filetype==1.2.0
     # via langchain-google-genai
-frozendict==2.4.6
+frozendict==2.4.7
     # via genanki
-frozenlist==1.7.0
+frozenlist==1.8.0
     # via
     #   aiohttp
     #   aiosignal
-fsspec==2025.9.0
+fsspec==2025.10.0
     # via huggingface-hub
 genanki==0.13.1
     # via -r requirements.in
-google-ai-generativelanguage==0.7.0
+google-ai-generativelanguage==0.9.0
     # via langchain-google-genai
-google-api-core==2.25.1
+google-api-core==2.28.1
     # via google-ai-generativelanguage
-google-auth==2.40.3
+google-auth==2.43.0
     # via
     #   google-ai-generativelanguage
     #   google-api-core
-googleapis-common-protos==1.70.0
+googleapis-common-protos==1.72.0
     # via
     #   google-api-core
     #   grpcio-status
 googletrans==4.0.2
     # via -r requirements.in
-grpcio==1.75.0
+grpcio==1.76.0
     # via
+    #   google-ai-generativelanguage
     #   google-api-core
     #   grpcio-status
-grpcio-status==1.75.0
+grpcio-status==1.76.0
     # via google-api-core
 h11==0.16.0
     # via httpcore
 h2==4.3.0
     # via httpx
-hf-xet==1.1.10
+hf-xet==1.2.0
     # via huggingface-hub
 hpack==4.1.0
     # via h2
-htmldate==1.9.3
+htmldate==1.9.4
     # via trafilatura
 httpcore==1.0.9
     # via httpx
@@ -151,19 +152,21 @@ httpx==0.28.1
     # via
     #   anthropic
     #   googletrans
+    #   huggingface-hub
     #   langchain-mistralai
+    #   langgraph-sdk
     #   langsmith
     #   ollama
     #   openai
-httpx-sse==0.4.1
+httpx-sse==0.4.3
     # via
     #   langchain-community
     #   langchain-mistralai
-huggingface-hub==0.35.0
+huggingface-hub==1.1.4
     # via tokenizers
 hyperframe==6.1.0
     # via h2
-idna==3.10
+idna==3.11
     # via
     #   anyio
     #   httpx
@@ -171,7 +174,7 @@ idna==3.10
     #   yarl
 jinja2==3.1.6
     # via spacy
-jiter==0.11.0
+jiter==0.12.0
     # via
     #   anthropic
     #   openai
@@ -183,42 +186,52 @@ jsonpointer==3.0.0
     # via jsonpatch
 justext==3.0.2
     # via trafilatura
-langchain==0.3.27
-    # via
-    #   -r requirements.in
-    #   langchain-community
-langchain-anthropic==0.3.20
+langchain==1.0.7
     # via -r requirements.in
-langchain-community==0.3.29
+langchain-anthropic==1.0.4
     # via -r requirements.in
-langchain-core==0.3.76
+langchain-classic==1.0.0
+    # via langchain-community
+langchain-community==0.4.1
+    # via -r requirements.in
+langchain-core==1.0.5
     # via
     #   -r requirements.in
     #   langchain
     #   langchain-anthropic
+    #   langchain-classic
     #   langchain-community
     #   langchain-google-genai
     #   langchain-mistralai
     #   langchain-openai
     #   langchain-text-splitters
-langchain-google-genai==2.1.12
+    #   langgraph
+    #   langgraph-checkpoint
+    #   langgraph-prebuilt
+langchain-google-genai==3.0.3
     # via -r requirements.in
-langchain-mistralai==0.2.12
+langchain-mistralai==1.0.1
     # via -r requirements.in
-langchain-openai==0.3.33
+langchain-openai==1.0.3
     # via -r requirements.in
-langchain-text-splitters==0.3.11
+langchain-text-splitters==1.0.0
+    # via langchain-classic
+langgraph==1.0.3
     # via langchain
-langcodes==3.5.0
-    # via spacy
-langsmith==0.4.29
+langgraph-checkpoint==3.0.1
     # via
-    #   langchain
+    #   langgraph
+    #   langgraph-prebuilt
+langgraph-prebuilt==1.0.4
+    # via langgraph
+langgraph-sdk==0.2.9
+    # via langgraph
+langsmith==0.4.43
+    # via
+    #   langchain-classic
     #   langchain-community
     #   langchain-core
-language-data==1.3.0
-    # via langcodes
-lxml==5.4.0
+lxml==6.0.2
     # via
     #   -r requirements.in
     #   ebooklib
@@ -227,34 +240,28 @@ lxml==5.4.0
     #   lxml-html-clean
     #   pagesmith
     #   trafilatura
-lxml-html-clean==0.4.2
+lxml-html-clean==0.4.3
     # via
     #   -r requirements.in
     #   lxml
-marisa-trie==1.3.1
-    # via language-data
-markdown-it-py==4.0.0
-    # via rich
-markupsafe==3.0.2
+markupsafe==3.0.3
     # via
     #   jinja2
     #   werkzeug
 marshmallow==3.26.1
     # via dataclasses-json
-mdurl==0.1.2
-    # via markdown-it-py
-multidict==6.6.4
+multidict==6.7.0
     # via
     #   aiohttp
     #   yarl
-murmurhash==1.0.13
+murmurhash==1.0.15
     # via
     #   preshed
     #   spacy
     #   thinc
 mypy-extensions==1.1.0
     # via typing-inspect
-nltk==3.9.1
+nltk==3.9.2
     # via -r requirements.in
 numpy==1.26.4
     # via
@@ -264,14 +271,18 @@ numpy==1.26.4
     #   langchain-community
     #   spacy
     #   thinc
-ollama==0.5.4
+ollama==0.6.1
     # via -r requirements.in
-openai==1.108.1
+openai==2.8.0
     # via
     #   -r requirements.in
     #   langchain-openai
-orjson==3.11.3
-    # via langsmith
+orjson==3.11.4
+    # via
+    #   langgraph-sdk
+    #   langsmith
+ormsgpack==1.12.0
+    # via langgraph-checkpoint
 packaging==25.0
     # via
     #   huggingface-hub
@@ -283,11 +294,11 @@ packaging==25.0
     #   weasel
 pagesmith==2.1.0
     # via -r requirements.in
-preshed==3.0.10
+preshed==3.0.11
     # via
     #   spacy
     #   thinc
-propcache==0.3.2
+propcache==0.4.1
     # via
     #   aiohttp
     #   yarl
@@ -295,14 +306,14 @@ proto-plus==1.26.1
     # via
     #   google-ai-generativelanguage
     #   google-api-core
-protobuf==6.32.1
+protobuf==6.33.1
     # via
     #   google-ai-generativelanguage
     #   google-api-core
     #   googleapis-common-protos
     #   grpcio-status
     #   proto-plus
-psutil==7.1.0
+psutil==7.1.3
     # via -r requirements.in
 pyasn1==0.6.1
     # via
@@ -314,16 +325,18 @@ pybind11==3.0.1
     # via fasttext
 pycparser==2.23
     # via cffi
-pydantic==2.11.9
+pydantic==2.12.4
     # via
     #   -r requirements.in
     #   anthropic
     #   confection
     #   langchain
     #   langchain-anthropic
+    #   langchain-classic
     #   langchain-core
     #   langchain-google-genai
     #   langchain-mistralai
+    #   langgraph
     #   langsmith
     #   ollama
     #   openai
@@ -331,12 +344,10 @@ pydantic==2.11.9
     #   spacy
     #   thinc
     #   weasel
-pydantic-core==2.33.2
+pydantic-core==2.41.5
     # via pydantic
-pydantic-settings==2.10.1
+pydantic-settings==2.12.0
     # via langchain-community
-pygments==2.19.2
-    # via rich
 pyjwt==2.10.1
     # via -r requirements.in
 pyopenssl==25.3.0
@@ -345,18 +356,18 @@ python-dateutil==2.9.0.post0
     # via
     #   dateparser
     #   htmldate
-python-dotenv==1.1.1
+python-dotenv==1.2.1
     # via pydantic-settings
 pytz==2025.2
     # via dateparser
-pyyaml==6.0.2
+pyyaml==6.0.3
     # via
     #   genanki
     #   huggingface-hub
-    #   langchain
+    #   langchain-classic
     #   langchain-community
     #   langchain-core
-regex==2025.9.18
+regex==2025.11.3
     # via
     #   dateparser
     #   nltk
@@ -365,8 +376,7 @@ requests==2.32.5
     # via
     #   deep-translator
     #   google-api-core
-    #   huggingface-hub
-    #   langchain
+    #   langchain-classic
     #   langchain-community
     #   langsmith
     #   requests-toolbelt
@@ -375,8 +385,6 @@ requests==2.32.5
     #   weasel
 requests-toolbelt==1.0.0
     # via langsmith
-rich==14.1.0
-    # via typer
 rsa==4.9.1
     # via google-auth
 setuptools==80.9.0
@@ -385,13 +393,13 @@ setuptools==80.9.0
     #   spacy
     #   thinc
 shellingham==1.5.4
-    # via typer
+    # via huggingface-hub
 six==1.17.0
     # via
     #   ebooklib
     #   python-dateutil
     #   transliterate
-smart-open==7.3.1
+smart-open==7.5.0
     # via weasel
 sniffio==1.3.1
     # via
@@ -400,15 +408,15 @@ sniffio==1.3.1
     #   openai
 soupsieve==2.8
     # via beautifulsoup4
-spacy==3.8.7
+spacy==3.8.9
     # via -r requirements.in
 spacy-legacy==3.0.12
     # via spacy
 spacy-loggers==1.0.5
     # via spacy
-sqlalchemy==2.0.43
+sqlalchemy==2.0.44
     # via
-    #   langchain
+    #   langchain-classic
     #   langchain-community
 sqlparse==0.5.3
     # via django
@@ -422,9 +430,9 @@ tenacity==9.1.2
     # via
     #   langchain-community
     #   langchain-core
-thinc==8.3.4
+thinc==8.3.9
     # via spacy
-tiktoken==0.11.0
+tiktoken==0.12.0
     # via langchain-openai
 tld==0.13.1
     # via courlan
@@ -440,8 +448,9 @@ trafilatura==2.0.0
     # via -r requirements.in
 transliterate==1.10.2
     # via -r requirements.in
-typer==0.19.1
+typer-slim==0.20.0
     # via
+    #   huggingface-hub
     #   spacy
     #   weasel
 typing-extensions==4.15.0
@@ -458,12 +467,12 @@ typing-extensions==4.15.0
     #   pydantic-core
     #   pyopenssl
     #   sqlalchemy
-    #   typer
+    #   typer-slim
     #   typing-inspect
     #   typing-inspection
 typing-inspect==0.9.0
     # via dataclasses-json
-typing-inspection==0.4.1
+typing-inspection==0.4.2
     # via
     #   pydantic
     #   pydantic-settings
@@ -482,13 +491,15 @@ wasabi==1.1.3
     #   spacy
     #   thinc
     #   weasel
-weasel==0.4.1
+weasel==0.4.3
     # via spacy
 werkzeug==3.1.3
     # via -r requirements.in
-wrapt==1.17.3
+wrapt==2.0.1
     # via smart-open
-yarl==1.20.1
+xxhash==3.6.0
+    # via langgraph
+yarl==1.22.0
     # via aiohttp
 zstandard==0.25.0
     # via langsmith
