--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 exclude: |
   (?x)(
-      .venv/|
+      .venv*/|
       ^tests/resources/|
       migrations/|
       experiments/|
@@ -16,7 +16,7 @@ repos:
       - id: trailing-whitespace
         exclude_types: [ python ]
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.14.5
+    rev: v0.14.10
     hooks:
       - id: ruff
         exclude: ^tests/
@@ -59,19 +59,18 @@ repos:
         args: [
           --line-length=100
         ]
-  - repo: local
+  - repo: https://github.com/facebook/pyrefly-pre-commit
+    rev: 0.46.3
     hooks:
-      - id: mypy
-        name: mypy
-        entry: mypy
-        args: [
-          "--install-types",
-          "--non-interactive",
-          "--ignore-missing-imports",
-          "--namespace-packages",
-          "--explicit-package-bases"
-        ]
-        require_serial: true
+      - id: pyrefly-check
+        name: pyrefly check
         language: system
-        types: [ python ]
-        exclude: (^tests/|lexiflux/environments)
+        args: [
+          "--project-excludes=**/tests/**",
+          "--project-excludes=**/experiments/**",
+          "--project-excludes=**/migrations/**",
+          "--project-excludes=**/lexiflux/calibre_plugin/**",
+          "--project-excludes=**/lexiflux/environments/koyeb.py",
+          "--project-excludes=**/.venv/**",
+          "--project-excludes=**/.venv-koyeb/**"
+        ]
