--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,15 @@ aiosignal==1.4.0
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-anthropic==0.73.0
+anthropic==0.75.0
     # via langchain-anthropic
-anyio==4.11.0
+anyio==4.12.0
     # via
     #   anthropic
+    #   google-genai
     #   httpx
     #   openai
-asgiref==3.10.0
+asgiref==3.11.0
     # via
     #   django
     #   django-allauth
@@ -23,15 +24,15 @@ attrs==25.4.0
     # via aiohttp
 babel==2.17.0
     # via courlan
-beautifulsoup4==4.14.2
+beautifulsoup4==4.14.3
     # via
     #   -r requirements.in
     #   deep-translator
-blis==1.3.2
+blis==1.3.3
     # via thinc
 cached-property==2.0.1
     # via genanki
-cachetools==6.2.2
+cachetools==6.2.4
     # via google-auth
 catalogue==2.0.10
     # via
@@ -83,13 +84,14 @@ deep-translator==1.11.4
 distro==1.9.0
     # via
     #   anthropic
+    #   google-genai
     #   openai
-django==5.2.8
+django==6.0
     # via
     #   -r requirements.in
     #   django-allauth
     #   django-extensions
-django-allauth==65.13.0
+django-allauth==65.13.1
     # via -r requirements.in
 django-extensions==4.1
     # via -r requirements.in
@@ -101,7 +103,7 @@ ebooklib==0.20
     # via -r requirements.in
 fasttext==0.9.3
     # via -r requirements.in
-filelock==3.20.0
+filelock==3.20.1
     # via huggingface-hub
 filetype==1.2.0
     # via langchain-google-genai
@@ -111,31 +113,16 @@ frozenlist==1.8.0
     # via
     #   aiohttp
     #   aiosignal
-fsspec==2025.10.0
+fsspec==2025.12.0
     # via huggingface-hub
 genanki==0.13.1
     # via -r requirements.in
-google-ai-generativelanguage==0.9.0
+google-auth==2.45.0
+    # via google-genai
+google-genai==1.56.0
     # via langchain-google-genai
-google-api-core==2.28.1
-    # via google-ai-generativelanguage
-google-auth==2.43.0
-    # via
-    #   google-ai-generativelanguage
-    #   google-api-core
-googleapis-common-protos==1.72.0
-    # via
-    #   google-api-core
-    #   grpcio-status
 googletrans==4.0.2
     # via -r requirements.in
-grpcio==1.76.0
-    # via
-    #   google-ai-generativelanguage
-    #   google-api-core
-    #   grpcio-status
-grpcio-status==1.76.0
-    # via google-api-core
 h11==0.16.0
     # via httpcore
 h2==4.3.0
@@ -151,6 +138,7 @@ httpcore==1.0.9
 httpx==0.28.1
     # via
     #   anthropic
+    #   google-genai
     #   googletrans
     #   huggingface-hub
     #   langchain-mistralai
@@ -162,7 +150,7 @@ httpx-sse==0.4.3
     # via
     #   langchain-community
     #   langchain-mistralai
-huggingface-hub==1.1.4
+huggingface-hub==1.2.3
     # via tokenizers
 hyperframe==6.1.0
     # via h2
@@ -178,7 +166,7 @@ jiter==0.12.0
     # via
     #   anthropic
     #   openai
-joblib==1.5.2
+joblib==1.5.3
     # via nltk
 jsonpatch==1.33
     # via langchain-core
@@ -186,15 +174,15 @@ jsonpointer==3.0.0
     # via jsonpatch
 justext==3.0.2
     # via trafilatura
-langchain==1.0.7
+langchain==1.2.0
     # via -r requirements.in
-langchain-anthropic==1.0.4
+langchain-anthropic==1.3.0
     # via -r requirements.in
-langchain-classic==1.0.0
+langchain-classic==1.0.1
     # via langchain-community
 langchain-community==0.4.1
     # via -r requirements.in
-langchain-core==1.0.5
+langchain-core==1.2.5
     # via
     #   -r requirements.in
     #   langchain
@@ -208,25 +196,25 @@ langchain-core==1.0.5
     #   langgraph
     #   langgraph-checkpoint
     #   langgraph-prebuilt
-langchain-google-genai==3.0.3
+langchain-google-genai==4.1.2
     # via -r requirements.in
-langchain-mistralai==1.0.1
+langchain-mistralai==1.1.1
     # via -r requirements.in
-langchain-openai==1.0.3
+langchain-openai==1.1.6
     # via -r requirements.in
-langchain-text-splitters==1.0.0
+langchain-text-splitters==1.1.0
     # via langchain-classic
-langgraph==1.0.3
+langgraph==1.0.5
     # via langchain
 langgraph-checkpoint==3.0.1
     # via
     #   langgraph
     #   langgraph-prebuilt
-langgraph-prebuilt==1.0.4
+langgraph-prebuilt==1.0.5
     # via langgraph
-langgraph-sdk==0.2.9
+langgraph-sdk==0.3.1
     # via langgraph
-langsmith==0.4.43
+langsmith==0.5.2
     # via
     #   langchain-classic
     #   langchain-community
@@ -248,7 +236,7 @@ markupsafe==3.0.3
     # via
     #   jinja2
     #   werkzeug
-marshmallow==3.26.1
+marshmallow==3.26.2
     # via dataclasses-json
 multidict==6.7.0
     # via
@@ -273,15 +261,15 @@ numpy==1.26.4
     #   thinc
 ollama==0.6.1
     # via -r requirements.in
-openai==2.8.0
+openai==2.14.0
     # via
     #   -r requirements.in
     #   langchain-openai
-orjson==3.11.4
+orjson==3.11.5
     # via
     #   langgraph-sdk
     #   langsmith
-ormsgpack==1.12.0
+ormsgpack==1.12.1
     # via langgraph-checkpoint
 packaging==25.0
     # via
@@ -294,7 +282,7 @@ packaging==25.0
     #   weasel
 pagesmith==2.1.0
     # via -r requirements.in
-preshed==3.0.11
+preshed==3.0.12
     # via
     #   spacy
     #   thinc
@@ -302,18 +290,7 @@ propcache==0.4.1
     # via
     #   aiohttp
     #   yarl
-proto-plus==1.26.1
-    # via
-    #   google-ai-generativelanguage
-    #   google-api-core
-protobuf==6.33.1
-    # via
-    #   google-ai-generativelanguage
-    #   google-api-core
-    #   googleapis-common-protos
-    #   grpcio-status
-    #   proto-plus
-psutil==7.1.3
+psutil==7.2.1
     # via -r requirements.in
 pyasn1==0.6.1
     # via
@@ -325,11 +302,12 @@ pybind11==3.0.1
     # via fasttext
 pycparser==2.23
     # via cffi
-pydantic==2.12.4
+pydantic==2.12.5
     # via
     #   -r requirements.in
     #   anthropic
     #   confection
+    #   google-genai
     #   langchain
     #   langchain-anthropic
     #   langchain-classic
@@ -375,7 +353,8 @@ regex==2025.11.3
 requests==2.32.5
     # via
     #   deep-translator
-    #   google-api-core
+    #   google-auth
+    #   google-genai
     #   langchain-classic
     #   langchain-community
     #   langsmith
@@ -404,23 +383,23 @@ smart-open==7.5.0
 sniffio==1.3.1
     # via
     #   anthropic
-    #   anyio
+    #   google-genai
     #   openai
-soupsieve==2.8
+soupsieve==2.8.1
     # via beautifulsoup4
-spacy==3.8.9
+spacy==3.8.11
     # via -r requirements.in
 spacy-legacy==3.0.12
     # via spacy
 spacy-loggers==1.0.5
     # via spacy
-sqlalchemy==2.0.44
+sqlalchemy==2.0.45
     # via
     #   langchain-classic
     #   langchain-community
-sqlparse==0.5.3
+sqlparse==0.5.5
     # via django
-srsly==2.5.1
+srsly==2.5.2
     # via
     #   confection
     #   spacy
@@ -428,9 +407,10 @@ srsly==2.5.1
     #   weasel
 tenacity==9.1.2
     # via
+    #   google-genai
     #   langchain-community
     #   langchain-core
-thinc==8.3.9
+thinc==8.3.10
     # via spacy
 tiktoken==0.12.0
     # via langchain-openai
@@ -448,7 +428,7 @@ trafilatura==2.0.0
     # via -r requirements.in
 transliterate==1.10.2
     # via -r requirements.in
-typer-slim==0.20.0
+typer-slim==0.21.0
     # via
     #   huggingface-hub
     #   spacy
@@ -459,7 +439,7 @@ typing-extensions==4.15.0
     #   anthropic
     #   anyio
     #   beautifulsoup4
-    #   grpcio
+    #   google-genai
     #   huggingface-hub
     #   langchain-core
     #   openai
@@ -480,12 +460,16 @@ tzlocal==5.3.1
     # via dateparser
 unidecode==1.4.0
     # via -r requirements.in
-urllib3==2.5.0
+urllib3==2.6.2
     # via
     #   courlan
     #   htmldate
     #   requests
     #   trafilatura
+uuid-utils==0.12.0
+    # via
+    #   langchain-core
+    #   langsmith
 wasabi==1.1.3
     # via
     #   spacy
@@ -493,7 +477,9 @@ wasabi==1.1.3
     #   weasel
 weasel==0.4.3
     # via spacy
-werkzeug==3.1.3
+websockets==15.0.1
+    # via google-genai
+werkzeug==3.1.4
     # via -r requirements.in
 wrapt==2.0.1
     # via smart-open
