fasttext-numpy2 to be compatible with numpy 2

--- a/requirements.in
+++ b/requirements.in
@@ -1,7 +1,7 @@
 # because use functools.lru_cache for methods
 # python_version>=3.8
-# fasttext 0.9.3 is not compatible with numpy 2
-numpy==1.26.4
+
+numpy
 django
 django-allauth
 deep-translator
@@ -26,7 +26,7 @@ transliterate
 trafilatura
 beautifulsoup4
 lxml
-fasttext
+fasttext-numpy2
 nltk
 pagesmith
 psutil
