--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -225,7 +225,7 @@ faker==40.1.0
     # via -r requirements.dev.in
 fastjsonschema==2.21.2
     # via nbformat
-fasttext==0.9.3
+fasttext-numpy2==0.10.4
     # via -r requirements.txt
 filelock==3.20.1
     # via
@@ -588,11 +588,11 @@ notebook==6.5.4
     # via -r requirements.dev.in
 notebook-shim==0.2.4
     # via nbclassic
-numpy==1.26.4
+numpy==2.4.0
     # via
     #   -r requirements.txt
     #   blis
-    #   fasttext
+    #   fasttext-numpy2
     #   langchain-community
     #   spacy
     #   thinc
@@ -695,7 +695,7 @@ pyasn1-modules==0.4.2
 pybind11==3.0.1
     # via
     #   -r requirements.txt
-    #   fasttext
+    #   fasttext-numpy2
 pycparser==2.23
     # via
     #   -r requirements.txt
@@ -864,7 +864,7 @@ send2trash==2.0.0
 setuptools==80.9.0
     # via
     #   -r requirements.txt
-    #   fasttext
+    #   fasttext-numpy2
     #   spacy
     #   thinc
 shellingham==1.5.4
