--- a/requirements.txt
+++ b/requirements.txt
@@ -101,7 +101,7 @@ docstring-parser==0.17.0
     # via anthropic
 ebooklib==0.20
     # via -r requirements.in
-fasttext==0.9.3
+fasttext-numpy2==0.10.4
     # via -r requirements.in
 filelock==3.20.1
     # via huggingface-hub
@@ -251,11 +251,11 @@ mypy-extensions==1.1.0
     # via typing-inspect
 nltk==3.9.2
     # via -r requirements.in
-numpy==1.26.4
+numpy==2.4.0
     # via
     #   -r requirements.in
     #   blis
-    #   fasttext
+    #   fasttext-numpy2
     #   langchain-community
     #   spacy
     #   thinc
@@ -299,7 +299,7 @@ pyasn1==0.6.1
 pyasn1-modules==0.4.2
     # via google-auth
 pybind11==3.0.1
-    # via fasttext
+    # via fasttext-numpy2
 pycparser==2.23
     # via cffi
 pydantic==2.12.5
@@ -368,7 +368,7 @@ rsa==4.9.1
     # via google-auth
 setuptools==80.9.0
     # via
-    #   fasttext
+    #   fasttext-numpy2
     #   spacy
     #   thinc
 shellingham==1.5.4
