--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -195,6 +195,7 @@ django==6.0
     #   django-extensions
     #   django-stubs
     #   django-stubs-ext
+    #   django-widget-tweaks
 django-allauth==65.13.1
     # via -r requirements.txt
 django-debug-toolbar==6.1.0
@@ -205,7 +206,7 @@ django-stubs==5.2.8
     # via -r requirements.dev.in
 django-stubs-ext==5.2.8
     # via django-stubs
-django-widget-tweaks==1.5.0
+django-widget-tweaks==1.5.1
     # via -r requirements.txt
 docopt==0.6.2
     # via coveralls
@@ -437,6 +438,7 @@ langchain-core==1.2.5
     #   langchain-community
     #   langchain-google-genai
     #   langchain-mistralai
+    #   langchain-ollama
     #   langchain-openai
     #   langchain-text-splitters
     #   langgraph
@@ -445,6 +447,8 @@ langchain-core==1.2.5
 langchain-google-genai==4.1.2
     # via -r requirements.txt
 langchain-mistralai==1.1.1
+    # via -r requirements.txt
+langchain-ollama==1.0.1
     # via -r requirements.txt
 langchain-openai==1.1.6
     # via -r requirements.txt
@@ -597,7 +601,9 @@ numpy==2.4.0
     #   spacy
     #   thinc
 ollama==0.6.1
-    # via -r requirements.txt
+    # via
+    #   -r requirements.txt
+    #   langchain-ollama
 openai==2.14.0
     # via
     #   -r requirements.txt
