--- a/requirements.txt
+++ b/requirements.txt
@@ -91,11 +91,12 @@ django==6.0
     #   -r requirements.in
     #   django-allauth
     #   django-extensions
+    #   django-widget-tweaks
 django-allauth==65.13.1
     # via -r requirements.in
 django-extensions==4.1
     # via -r requirements.in
-django-widget-tweaks==1.5.0
+django-widget-tweaks==1.5.1
     # via -r requirements.in
 docstring-parser==0.17.0
     # via anthropic
@@ -191,6 +192,7 @@ langchain-core==1.2.5
     #   langchain-community
     #   langchain-google-genai
     #   langchain-mistralai
+    #   langchain-ollama
     #   langchain-openai
     #   langchain-text-splitters
     #   langgraph
@@ -199,6 +201,8 @@ langchain-core==1.2.5
 langchain-google-genai==4.1.2
     # via -r requirements.in
 langchain-mistralai==1.1.1
+    # via -r requirements.in
+langchain-ollama==1.0.1
     # via -r requirements.in
 langchain-openai==1.1.6
     # via -r requirements.in
@@ -260,7 +264,9 @@ numpy==2.4.0
     #   spacy
     #   thinc
 ollama==0.6.1
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   langchain-ollama
 openai==2.14.0
     # via
     #   -r requirements.in
