--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -4,7 +4,7 @@ aiohappyeyeballs==2.6.1
     # via
     #   -r requirements.txt
     #   aiohttp
-aiohttp==3.13.2
+aiohttp==3.13.3
     # via
     #   -r requirements.txt
     #   langchain-community
@@ -20,11 +20,11 @@ annotated-types==0.7.0
     # via
     #   -r requirements.txt
     #   pydantic
-anthropic==0.75.0
+anthropic==0.76.0
     # via
     #   -r requirements.txt
     #   langchain-anthropic
-anyio==4.12.0
+anyio==4.12.1
     # via
     #   -r requirements.txt
     #   anthropic
@@ -51,6 +51,8 @@ asttokens==3.0.1
     # via
     #   icecream
     #   stack-data
+async-generator==1.10
+    # via trio-typing
 attrs==25.4.0
     # via
     #   -r requirements.txt
@@ -84,17 +86,13 @@ cached-property==2.0.1
     # via
     #   -r requirements.txt
     #   genanki
-cachetools==6.2.4
-    # via
-    #   -r requirements.txt
-    #   google-auth
 catalogue==2.0.10
     # via
     #   -r requirements.txt
     #   spacy
     #   srsly
     #   thinc
-certifi==2025.11.12
+certifi==2026.1.4
     # via
     #   -r requirements.txt
     #   httpcore
@@ -187,7 +185,7 @@ distro==1.9.0
     #   anthropic
     #   google-genai
     #   openai
-django==6.0
+django==6.0.1
     # via
     #   -r requirements.txt
     #   django-allauth
@@ -196,7 +194,7 @@ django==6.0
     #   django-stubs
     #   django-stubs-ext
     #   django-widget-tweaks
-django-allauth==65.13.1
+django-allauth==65.14.0
     # via -r requirements.txt
 django-debug-toolbar==6.1.0
     # via -r requirements.dev.in
@@ -222,13 +220,13 @@ executing==2.2.1
     # via
     #   icecream
     #   stack-data
-faker==40.1.0
+faker==40.1.2
     # via -r requirements.dev.in
 fastjsonschema==2.21.2
     # via nbformat
 fasttext-numpy2==0.10.4
     # via -r requirements.txt
-filelock==3.20.1
+filelock==3.20.3
     # via
     #   -r requirements.txt
     #   huggingface-hub
@@ -248,7 +246,7 @@ frozenlist==1.8.0
     #   -r requirements.txt
     #   aiohttp
     #   aiosignal
-fsspec==2025.12.0
+fsspec==2026.1.0
     # via
     #   -r requirements.txt
     #   huggingface-hub
@@ -256,11 +254,11 @@ genanki==0.13.1
     # via -r requirements.txt
 ghp-import==2.1.0
     # via mkdocs
-google-auth==2.45.0
+google-auth==2.47.0
     # via
     #   -r requirements.txt
     #   google-genai
-google-genai==1.56.0
+google-genai==1.59.0
     # via
     #   -r requirements.txt
     #   langchain-google-genai
@@ -310,7 +308,7 @@ httpx-sse==0.4.3
     #   -r requirements.txt
     #   langchain-community
     #   langchain-mistralai
-huggingface-hub==1.2.3
+huggingface-hub==1.3.2
     # via
     #   -r requirements.txt
     #   tokenizers
@@ -320,7 +318,7 @@ hyperframe==6.1.0
     #   h2
 icecream==2.1.3
     # via -r requirements.dev.in
-identify==2.6.15
+identify==2.6.16
     # via pre-commit
 idna==3.11
     # via
@@ -331,6 +329,8 @@ idna==3.11
     #   requests
     #   trio
     #   yarl
+importlib-metadata==8.7.1
+    # via trio-typing
 iniconfig==2.3.0
     # via pytest
 invoke==2.2.1
@@ -380,7 +380,7 @@ jsonpointer==3.0.0
     #   -r requirements.txt
     #   jsonpatch
     #   jsonschema
-jsonschema==4.25.1
+jsonschema==4.26.0
     # via
     #   jupyter-events
     #   nbformat
@@ -411,7 +411,7 @@ jupyter-events==0.12.0
     # via jupyter-server
 jupyter-server==2.17.0
     # via notebook-shim
-jupyter-server-terminals==0.5.3
+jupyter-server-terminals==0.5.4
     # via jupyter-server
 jupyterlab-pygments==0.3.0
     # via nbconvert
@@ -419,9 +419,9 @@ justext==3.0.2
     # via
     #   -r requirements.txt
     #   trafilatura
-langchain==1.2.0
+langchain==1.2.6
     # via -r requirements.txt
-langchain-anthropic==1.3.0
+langchain-anthropic==1.3.1
     # via -r requirements.txt
 langchain-classic==1.0.1
     # via
@@ -429,7 +429,7 @@ langchain-classic==1.0.1
     #   langchain-community
 langchain-community==0.4.1
     # via -r requirements.txt
-langchain-core==1.2.5
+langchain-core==1.2.7
     # via
     #   -r requirements.txt
     #   langchain
@@ -444,36 +444,36 @@ langchain-core==1.2.5
     #   langgraph
     #   langgraph-checkpoint
     #   langgraph-prebuilt
-langchain-google-genai==4.1.2
+langchain-google-genai==4.2.0
     # via -r requirements.txt
 langchain-mistralai==1.1.1
     # via -r requirements.txt
 langchain-ollama==1.0.1
     # via -r requirements.txt
-langchain-openai==1.1.6
+langchain-openai==1.1.7
     # via -r requirements.txt
 langchain-text-splitters==1.1.0
     # via
     #   -r requirements.txt
     #   langchain-classic
-langgraph==1.0.5
+langgraph==1.0.6
     # via
     #   -r requirements.txt
     #   langchain
-langgraph-checkpoint==3.0.1
+langgraph-checkpoint==4.0.0
     # via
     #   -r requirements.txt
     #   langgraph
     #   langgraph-prebuilt
-langgraph-prebuilt==1.0.5
+langgraph-prebuilt==1.0.6
     # via
     #   -r requirements.txt
     #   langgraph
-langgraph-sdk==0.3.1
+langgraph-sdk==0.3.3
     # via
     #   -r requirements.txt
     #   langgraph
-langsmith==0.5.2
+langsmith==0.6.4
     # via
     #   -r requirements.txt
     #   langchain-classic
@@ -542,7 +542,7 @@ mkdocs-material==9.7.1
     # via -r requirements.dev.in
 mkdocs-material-extensions==1.3.1
     # via mkdocs-material
-mkdocstrings==1.0.0
+mkdocstrings==1.0.1
     # via
     #   -r requirements.dev.in
     #   mkdocstrings-python
@@ -562,6 +562,7 @@ murmurhash==1.0.15
 mypy-extensions==1.1.0
     # via
     #   -r requirements.txt
+    #   trio-typing
     #   typing-inspect
 natsort==8.4.0
     # via mkdocs-awesome-pages-plugin
@@ -592,7 +593,7 @@ notebook==6.5.4
     # via -r requirements.dev.in
 notebook-shim==0.2.4
     # via nbclassic
-numpy==2.4.0
+numpy==2.4.1
     # via
     #   -r requirements.txt
     #   blis
@@ -604,7 +605,7 @@ ollama==0.6.1
     # via
     #   -r requirements.txt
     #   langchain-ollama
-openai==2.14.0
+openai==2.15.0
     # via
     #   -r requirements.txt
     #   langchain-openai
@@ -613,7 +614,7 @@ orjson==3.11.5
     #   -r requirements.txt
     #   langgraph-sdk
     #   langsmith
-ormsgpack==1.12.1
+ormsgpack==1.12.2
     # via
     #   -r requirements.txt
     #   langgraph-checkpoint
@@ -636,8 +637,9 @@ packaging==25.0
     #   pytest
     #   spacy
     #   thinc
+    #   trio-typing
     #   weasel
-pagesmith==2.1.0
+pagesmith==2.1.1
     # via -r requirements.txt
 paginate==0.5.7
     # via mkdocs-material
@@ -645,7 +647,7 @@ pandocfilters==1.5.1
     # via nbconvert
 parso==0.8.5
     # via jedi
-pathspec==0.12.1
+pathspec==1.0.3
     # via mkdocs
 pexpect==4.9.0
     # via ipython
@@ -666,7 +668,7 @@ preshed==3.0.12
     #   -r requirements.txt
     #   spacy
     #   thinc
-prometheus-client==0.23.1
+prometheus-client==0.24.1
     # via
     #   jupyter-server
     #   notebook
@@ -689,7 +691,7 @@ ptyprocess==0.7.0
     #   terminado
 pure-eval==0.2.3
     # via stack-data
-pyasn1==0.6.1
+pyasn1==0.6.2
     # via
     #   -r requirements.txt
     #   pyasn1-modules
@@ -751,7 +753,7 @@ pymdown-extensions==10.20
     #   mkdocstrings
 pyopenssl==25.3.0
     # via -r requirements.txt
-pyrefly==0.46.3
+pyrefly==0.48.2
     # via -r requirements.dev.in
 pysocks==1.7.1
     # via urllib3
@@ -815,7 +817,7 @@ referencing==0.37.0
     #   jsonschema
     #   jsonschema-specifications
     #   jupyter-events
-regex==2025.11.3
+regex==2026.1.15
     # via
     #   -r requirements.txt
     #   dateparser
@@ -861,9 +863,9 @@ rsa==4.9.1
     # via
     #   -r requirements.txt
     #   google-auth
-selenium==4.39.0
+selenium==4.40.0
     # via -r requirements.dev.in
-send2trash==2.0.0
+send2trash==2.1.0
     # via
     #   jupyter-server
     #   notebook
@@ -897,7 +899,7 @@ sniffio==1.3.1
     #   trio
 sortedcontainers==2.4.0
     # via trio
-soupsieve==2.8.1
+soupsieve==2.8.2
     # via
     #   -r requirements.txt
     #   beautifulsoup4
@@ -955,7 +957,7 @@ tld==0.13.1
     # via
     #   -r requirements.txt
     #   courlan
-tokenizers==0.22.1
+tokenizers==0.22.2
     # via
     #   -r requirements.txt
     #   langchain-mistralai
@@ -995,17 +997,24 @@ transliterate==1.10.2
 trio==0.32.0
     # via
     #   selenium
+    #   trio-typing
     #   trio-websocket
+trio-typing==0.10.0
+    # via selenium
 trio-websocket==0.12.2
     # via selenium
-typer-slim==0.21.0
+typer-slim==0.21.1
     # via
     #   -r requirements.txt
     #   huggingface-hub
     #   spacy
     #   weasel
+types-certifi==2021.10.8.3
+    # via selenium
 types-pyyaml==6.0.12.20250915
     # via django-stubs
+types-urllib3==1.26.25.14
+    # via selenium
 typing-extensions==4.15.0
     # via
     #   -r requirements.txt
@@ -1025,6 +1034,7 @@ typing-extensions==4.15.0
     #   referencing
     #   selenium
     #   sqlalchemy
+    #   trio-typing
     #   typer-slim
     #   typing-inspect
     #   typing-inspection
@@ -1038,9 +1048,7 @@ typing-inspection==0.4.2
     #   pydantic
     #   pydantic-settings
 tzdata==2025.3
-    # via
-    #   arrow
-    #   faker
+    # via arrow
 tzlocal==5.3.1
     # via
     #   -r requirements.txt
@@ -1049,7 +1057,7 @@ unidecode==1.4.0
     # via -r requirements.txt
 uri-template==1.3.0
     # via jsonschema
-urllib3==2.6.2
+urllib3==2.6.3
     # via
     #   -r requirements.txt
     #   courlan
@@ -1057,12 +1065,12 @@ urllib3==2.6.2
     #   requests
     #   selenium
     #   trafilatura
-uuid-utils==0.12.0
+uuid-utils==0.13.0
     # via
     #   -r requirements.txt
     #   langchain-core
     #   langsmith
-virtualenv==20.35.4
+virtualenv==20.36.1
     # via pre-commit
 wasabi==1.1.3
     # via
@@ -1094,7 +1102,7 @@ websockets==15.0.1
     # via
     #   -r requirements.txt
     #   google-genai
-werkzeug==3.1.4
+werkzeug==3.1.5
     # via -r requirements.txt
 wrapt==2.0.1
     # via
@@ -1110,6 +1118,8 @@ yarl==1.22.0
     # via
     #   -r requirements.txt
     #   aiohttp
+zipp==3.23.0
+    # via importlib-metadata
 zstandard==0.25.0
     # via
     #   -r requirements.txt
